<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.enrique.mansiones_locura.Sotano">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblRecibidor"
        android:id="@+id/button12"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:onClick="toRecibidor" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblSalaRitual"
        android:id="@+id/button13"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:onClick="toSalaRitual" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/txtlblVida"
        android:id="@+id/txtVida"
        android:layout_above="@+id/button12"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="40dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/txtlblTurno"
        android:id="@+id/textView2"
        android:layout_above="@+id/button12"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/txtlblAccion"
        android:id="@+id/textView3"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/lbltxtVida"
        android:id="@+id/lblVidaRec"
        android:layout_alignTop="@+id/txtVida"
        android:layout_alignEnd="@+id/button13" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/lbltxtTurn"
        android:id="@+id/lblTurnoRec"
        android:layout_alignTop="@+id/textView2"
        android:layout_alignStart="@+id/lblVidaRec" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/lbltxtAccion"
        android:id="@+id/lblAccionRec"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/lblTurnoRec" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnExpltxt"
        android:id="@+id/button25"
        android:onClick="explorar"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
