<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.enrique.mansiones_locura.Recibidor">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblPasillo"
        android:id="@+id/btnToPasillo"
        android:layout_alignParentEnd="true"
        android:onClick="toPasillo" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblSotano"
        android:id="@+id/btnToSotano"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:onClick="toSotano"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblLaboratorio"
        android:id="@+id/button"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true"
        android:onClick="toLaboratorio"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblCocina"
        android:id="@+id/button2"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:onClick="toCocina"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblRecibidor"
        android:id="@+id/textView"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/txtlblVida"
        android:id="@+id/textView10"
        android:layout_marginBottom="63dp"
        android:layout_above="@+id/textView"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/txtlblTurno"
        android:id="@+id/textView11"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/textView10"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/txtlblAccion"
        android:id="@+id/textView12"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/textView11"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="TEST"
        android:id="@+id/lblVidaRec"
        android:layout_below="@+id/lblTurnoRec"
        android:layout_alignEnd="@+id/lblTurnoRec" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="TEXT"
        android:id="@+id/lblTurnoRec"
        android:layout_below="@+id/lblAccionRec"
        android:layout_alignEnd="@+id/lblAccionRec" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="TEST"
        android:id="@+id/lblAccionRec"
        android:layout_alignTop="@+id/textView12"
        android:layout_alignEnd="@+id/button2" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnExpltxt"
        android:id="@+id/button23"
        android:onClick="explorar"
        android:layout_below="@+id/lblVidaRec"
        android:layout_alignEnd="@+id/btnToPasillo" />

</RelativeLayout>
