<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.enrique.mansiones_locura.Pasillo">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblHabPrincipal"
        android:id="@+id/button6"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:onClick="toHabPrincipal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblHabInvitados"
        android:id="@+id/button7"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:onClick="toHabInvitados" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblRecibidor"
        android:id="@+id/button8"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:onClick="toRecibidor" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/txtlblVida"
        android:id="@+id/textView13"
        android:layout_marginBottom="75dp"
        android:layout_above="@+id/button8"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/txtlblTurno"
        android:id="@+id/textView14"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/textView13"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/txtlblAccion"
        android:id="@+id/textView15"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/textView14"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="TEST"
        android:id="@+id/lblAccionPas"
        android:layout_alignTop="@+id/textView15"
        android:layout_alignStart="@+id/lblTurnoPas" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="TEXT"
        android:id="@+id/lblTurnoPas"
        android:layout_below="@+id/lblAccionPas"
        android:layout_toRightOf="@+id/textView15"
        android:layout_marginLeft="39dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="TEST"
        android:id="@+id/lblVidaPas"
        android:layout_below="@+id/lblTurnoPas"
        android:layout_toRightOf="@+id/textView15"
        android:layout_marginLeft="39dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnExpltxt"
        android:id="@+id/button22"
        android:onClick="explorar"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
