<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.enrique.mansiones_locura.Laboratorio">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblJardin"
        android:id="@+id/button3"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:onClick="toJardin"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblRecibidor"
        android:id="@+id/button4"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:onClick="toRecibidor"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/txtlblVida"
        android:id="@+id/textView16"
        android:layout_marginBottom="39dp"
        android:layout_above="@+id/button3"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/txtlblTurno"
        android:id="@+id/textView17"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/textView16"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/txtlblAccion"
        android:id="@+id/textView18"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/textView17"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="TEST"
        android:id="@+id/lblAccionLab"
        android:layout_alignTop="@+id/textView18"
        android:layout_toEndOf="@+id/textView18"
        android:layout_marginStart="26dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="TEXT"
        android:id="@+id/lblTurnoLab"
        android:layout_marginLeft="37dp"
        android:layout_alignTop="@+id/textView17"
        android:layout_alignEnd="@+id/lblAccionLab" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="TEST"
        android:id="@+id/lblVIdaLab"
        android:layout_marginLeft="37dp"
        android:layout_alignTop="@+id/textView16"
        android:layout_alignEnd="@+id/lblTurnoLab" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnExpltxt"
        android:id="@+id/btnExpl"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:onClick="explorar" />

</RelativeLayout>
