<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.enrique.mansiones_locura.HabInvitados">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblPasillo"
        android:id="@+id/button10"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:onClick="toPasillo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/txtlblVida"
        android:id="@+id/textView46"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/txtlblTurno"
        android:id="@+id/textView47"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView46"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/txtlblAccion"
        android:id="@+id/textView48"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView47"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="TEST"
        android:id="@+id/lblTurnoHabInv"
        android:layout_alignTop="@+id/textView47"
        android:layout_alignStart="@+id/lblAccionHabInv" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="TEXT"
        android:id="@+id/lblVidaHabInv"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/lblTurnoHabInv" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="TEST"
        android:id="@+id/lblAccionHabInv"
        android:layout_alignBottom="@+id/textView48"
        android:layout_alignEnd="@+id/button10" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnExpltxt"
        android:id="@+id/button19"
        android:layout_alignTop="@+id/lblVidaHabInv"
        android:layout_alignParentEnd="true"
        android:onClick="explorar" />
</RelativeLayout>
