<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.enrique.mansiones_locura.Jardin">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblLaboratorio"
        android:id="@+id/button5"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:onClick="toLaboratorio" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/txtlblVida"
        android:id="@+id/textView19"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/textView20"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="26dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/txtlblTurno"
        android:id="@+id/textView20"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="26dp"
        android:layout_marginBottom="100dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/txtlblAccion"
        android:id="@+id/textView21"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/textView19"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="26dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="TEST"
        android:id="@+id/lblActionJar"
        android:layout_alignTop="@+id/textView21"
        android:layout_toStartOf="@+id/button5"
        android:layout_marginEnd="29dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="TEXT"
        android:id="@+id/lblVidaJar"
        android:layout_below="@+id/lblActionJar"
        android:layout_toLeftOf="@+id/button5"
        android:layout_marginRight="28dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="TEST"
        android:id="@+id/lblTurnoJar"
        android:layout_below="@+id/lblVidaJar"
        android:layout_toLeftOf="@+id/button5"
        android:layout_marginRight="28dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnExpltxt"
        android:id="@+id/button18"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:onClick="explorar" />

</RelativeLayout>
